Adding further analysis on Models v1

--- a/MidtermProjectFinal_pd.ipynb
+++ b/MidtermProjectFinal_pd.ipynb
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color='red'> The above table shows that none of the variables (independent or dependent) has missing values. Hence, no need of missing value imputation or removal of data\n",
+    "#####  The above table shows that none of the variables (independent or dependent) has missing values. Hence, no need of missing value imputation or removal of data\n",
     "    "
    ]
   },
@@ -870,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color = 'red'> Since Test accuracy is as high as Training Accuracy, it can be inferred that model doesn't seem to overfit on training data. However, this can be further analyzed using Cross Validation (Leave One Out Analylsis). This will help us determinge if the model is dependent on train test split or is sensitive to any specific data points.  "
+    "##### Since Test accuracy is as high as Training Accuracy, it can be inferred that model doesn't seem to overfit on training data. However, this can be further analyzed using Cross Validation (Leave One Out Analylsis). This will help us determinge if the model is dependent on train test split or is sensitive to any specific data points.  "
    ]
   },
   {
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color = 'red'> As shown from the above feature importance scores, it appears Nausea and Burning Variables do not add any descrimination power for classification problem. We want to further analyze the decision pathto confirm the validity of the assumption. Plotting the decision tree below"
+    "##### As shown from the above feature importance scores, it appears Nausea and Burning Variables do not add any descrimination power for classification problem. We want to further analyze the decision pathto confirm the validity of the assumption. Plotting the decision tree below"
    ]
   },
   {
@@ -1000,7 +1000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color= 'red'> Taking linear kernel to avoid overfitting for SVM. There are very high chances of overfitting using RBF kernel with SVM if there are  outliers as RBF kernel can be non-linear in nature. "
+    "##### Taking linear kernel to avoid overfitting for SVM. There are very high chances of overfitting using RBF kernel with SVM if there are  outliers as RBF kernel can be non-linear in nature. "
    ]
   },
   {
